# so101-data-collection

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  flake.nix  opencode.json  pyproject.toml
.claude/: settings.json
.cursor/plans/: act_relative_positions_17cf01f1.plan.md  data_collection_script_f01d8f75.plan.md
.cursor/rules/general-tips/: RULE.md
.cursor/rules/lerobot-setup/: RULE.md
.cursor/rules/project-plan/: RULE.md  plan.md
plans/: act_relative_positions.md  act_relative_rtc_3_ablation.md  benchmark_backbone_compute.md  data_collection.md  eval_async_rtc.md  fix_rtc_implementation.md  gpu_utilization_debug.md  gpu_utilization_debug_2.md  main.md  preprocess_dataset.md  rtc_batch_expansion.md
src/: __init__.py  benchmark_tracker.py  collect.py  eval_act_umi.py  main.py  push_to_hub.py  setup.py  train_act_umi.py
src/act_umi/: __init__.py  configuration_act_umi.py  modeling_act_umi.py  processor_act_umi.py  relative_stats.py
src/collect/: collect.py
src/eval/: eval_act_umi.py
src/latency/: __init__.py  measure_camera.py  measure_camera_raw.py  measure_execution.py  measure_proprioception.py  sweep_homing_fps.py
src/shared/: setup.py
src/train/: __init__.py  configuration_act_umi.py  modeling_act_umi.py  relative_stats.py
src/zxtra/: __init__.py  compare_policies_on_episode.py  push_dataset_to_hub.py  push_model_to_hub.py  release_motors.py  validate_policy_overfit.py
