[project]
name = "so101-data-collection"
version = "0.1.0"
description = "Exploring data collection strategies for the SO101 robot arm."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Pinned to commit 6d0d65a (2025-12-28) - latest main, ahead of PyPI 0.4.2
  "lerobot[feetech] @ git+https://github.com/huggingface/lerobot.git@6d0d65a5fec490c966b186bf9455ed3ea82f3f52",
  "matplotlib>=3.10.8",
  "qrcode[pil]>=8.0",
  "scipy>=1.15.3",
]

[tool.uv]
# Force av to be compiled from source so it links against the system FFmpeg
# (installed via Nix) instead of using pre-built wheels with bundled FFmpeg
no-binary-package = ["av"]
